# openrank-poc

./: Cargo.toml  LICENSE  README.md
src/: compute_node.rs  compute_tree.rs  da.rs  eigen_trust.rs  local_trust_tree.rs  main.rs  merkle_tree.rs  poseidon.rs  settlement.rs
src/algo/: et_field.rs  field.rs  h_and_a_field.rs  h_and_a_float.rs  h_and_a_rational.rs  mod.rs  rational.rs
src/compute_node/: am_tree.rs  compute_tree.rs  lt_tree.rs  mod.rs
src/params/: mod.rs  poseidon_bn254_5x5.rs
src/systems/: mod.rs  optimistic.rs  pessimistic.rs
