[package]
name = "openrank-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "v0.6.1" }
hex = "0.4.3"
num-integer = "0.1.46"
num-traits = "0.2.18"
rand = "0.8.5"
